--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -24,8 +24,8 @@ jobs:
       - name: Cache Node modules
         uses: actions/cache@v3
         with:
-          path: varzea_app_completo/node_modules
-          key: ${{ runner.os }}-node-${{ hashFiles('varzea_app_completo/package-lock.json') }}
+          path: node_modules
+          key: ${{ runner.os }}-node-${{ hashFiles('package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-node-
 
@@ -33,24 +33,23 @@ jobs:
       - name: Install Cordova
         run: npm install -g cordova
 
-      # 5️⃣ Configurar JDK (compatível com Cordova/Gradle)
+      # 5️⃣ Configurar JDK
       - name: Set up Java
         uses: actions/setup-java@v3
         with:
           distribution: temurin
-          java-version: 17
+          java-version: 21
 
-      # 6️⃣ Cache do Android SDK
+      # 6️⃣ Cache Android SDK
       - name: Cache Android SDK
         uses: actions/cache@v3
         with:
-          path: |
-            $HOME/android-sdk
+          path: $HOME/android-sdk
           key: ${{ runner.os }}-android-sdk
           restore-keys: |
             ${{ runner.os }}-android-sdk
 
-      # 7️⃣ Instalar Android SDK (corrigido)
+      # 7️⃣ Instalar Android SDK (se não estiver em cache)
       - name: Install Android SDK tools
         run: |
           if [ ! -d "$HOME/android-sdk/cmdline-tools/latest" ]; then
@@ -58,32 +57,31 @@ jobs:
             sudo apt-get install -y unzip wget
             mkdir -p $HOME/android-sdk/cmdline-tools
             cd $HOME/android-sdk
-            wget -q https://dl.google.com/android/repository/commandlinetools-linux-11076708_latest.zip -O cmdtools.zip
-            unzip -q cmdtools.zip -d cmdline-tools
-            rm cmdtools.zip
-            # Corrigir nova estrutura (cmdline-tools/cmdline-tools/bin)
-            mv cmdline-tools/cmdline-tools $HOME/android-sdk/cmdline-tools/latest
+            wget https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip -O cmdline-tools.zip
+            unzip cmdline-tools.zip -d cmdline-tools
+            rm cmdline-tools.zip
+            mkdir -p cmdline-tools/latest
+            mv cmdline-tools/bin cmdline-tools/latest/
+            mv cmdline-tools/lib cmdline-tools/latest/ 2>/dev/null
           fi
           export ANDROID_HOME=$HOME/android-sdk
           export PATH=$ANDROID_HOME/cmdline-tools/latest/bin:$PATH
           yes | sdkmanager --licenses
           sdkmanager "platform-tools" "platforms;android-33" "build-tools;33.0.2"
 
-      # 8️⃣ Instalar dependências do projeto
+      # 8️⃣ Instalar dependências
       - name: Install project dependencies
         run: |
-          cd varzea_app_completo
           npm install
 
-      # 9️⃣ Build Android APK
+      # 9️⃣ Build do APK Android
       - name: Build Android APK
         run: |
-          cd varzea_app_completo
           cordova build android --release
 
-      # 🔟 Upload APK como artifact (corrigido p/ v4)
+      # 🔟 Upload do APK
       - name: Upload APK artifact
         uses: actions/upload-artifact@v4
         with:
           name: naraca-apk
-          path: varzea_app_completo/platforms/android/app/build/outputs/apk/release/*.apk
+          path: platforms/android/app/build/outputs/apk/release/*.apk
