--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -50,17 +50,32 @@ jobs:
             ${{ runner.os }}-android-sdk
 
       # 7️⃣ Instalar Android SDK (se não estiver em cache)
+      # 7️⃣ Instalar Android SDK (se não estiver em cache)
       - name: Install Android SDK tools
         run: |
-          wget https://dl.google.com/android/repository/commandlinetools-linux-10406996_latest.zip
-          unzip -q commandlinetools-linux-10406996_latest.zip
-          mkdir -p $ANDROID_HOME/cmdline-tools/latest
-          mv cmdline-tools/* $ANDROID_HOME/cmdline-tools/latest/
-          export ANDROID_HOME=$HOME/android-sdk
-          export PATH=$ANDROID_HOME/cmdline-tools/latest/bin:$PATH
-          yes | sdkmanager --licenses
-          sdkmanager "platform-tools" "platforms;android-33" "build-tools;33.0.2"
+          sudo apt-get update
+          sudo apt-get install -y unzip wget
+          mkdir -p $HOME/android-sdk/cmdline-tools
+          cd $HOME/android-sdk
 
+          # Baixar e extrair o SDK
+          wget https://dl.google.com/android/repository/commandlinetools-linux-10406996_latest.zip -O cmdline-tools.zip
+          unzip -o cmdline-tools.zip -d cmdline-tools
+          rm cmdline-tools.zip
+
+          # Remover pasta antiga para evitar erro "Directory not empty"
+          sudo rm -rf cmdline-tools/latest
+          mkdir -p cmdline-tools/latest
+
+          # Mover arquivos corretamente
+          mv cmdline-tools/cmdline-tools/* cmdline-tools/latest/
+
+          # Configurar variáveis de ambiente
+          export ANDROID_HOME=$HOME/android-sdk
+          export PATH=$ANDROID_HOME/cmdline-tools/latest/bin:$ANDROID_HOME/platform-tools:$PATH
+
+          yes | $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager --licenses
+          $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager "platform-tools" "platforms;android-33" "build-tools;33.0.2"
       # 8️⃣ Instalar dependências
       - name: Install project dependencies
         run: |
