--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -40,52 +40,34 @@ jobs:
           distribution: temurin
           java-version: 21
 
-      # 6️⃣ Cache Android SDK
-      - name: Cache Android SDK
-        uses: actions/cache@v3
-        with:
-          path: $HOME/android-sdk
-          key: ${{ runner.os }}-android-sdk
-          restore-keys: |
-            ${{ runner.os }}-android-sdk
-
-      # 7️⃣ Instalar Android SDK (se não estiver em cache)
-      # 7️⃣ Instalar Android SDK (se não estiver em cache)
+      # 6️⃣ Instalar Android SDK
       - name: Install Android SDK tools
         run: |
           sudo apt-get update
           sudo apt-get install -y unzip wget
           mkdir -p $HOME/android-sdk/cmdline-tools
           cd $HOME/android-sdk
-
-          # Baixar e extrair o SDK
           wget https://dl.google.com/android/repository/commandlinetools-linux-10406996_latest.zip -O cmdline-tools.zip
-          unzip -o cmdline-tools.zip -d cmdline-tools
+          unzip cmdline-tools.zip -d cmdline-tools
           rm cmdline-tools.zip
-
-          # Remover pasta antiga para evitar erro "Directory not empty"
-          sudo rm -rf cmdline-tools/latest
           mkdir -p cmdline-tools/latest
-
-          # Mover arquivos corretamente
           mv cmdline-tools/cmdline-tools/* cmdline-tools/latest/
-
-          # Configurar variáveis de ambiente
           export ANDROID_HOME=$HOME/android-sdk
-          export PATH=$ANDROID_HOME/cmdline-tools/latest/bin:$ANDROID_HOME/platform-tools:$PATH
+          export PATH=$ANDROID_HOME/cmdline-tools/latest/bin:$PATH
+          yes | sdkmanager --licenses
+          sdkmanager "platform-tools" "platforms;android-33" "build-tools;33.0.2"
 
-          yes | $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager --licenses
-          $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager "platform-tools" "platforms;android-33" "build-tools;33.0.2"
-      # 8️⃣ Instalar dependências do projeto
+      # 7️⃣ Instalar dependências do projeto
       - name: Install project dependencies
         run: |
           npm install
 
-      # 9️⃣ Build Android APK
+      # 8️⃣ Build Android APK
       - name: Build Android APK
         run: |
           cordova build android --release
-      # 🔟 Upload do APK
+
+      # 9️⃣ Upload do APK gerado
       - name: Upload APK artifact
         uses: actions/upload-artifact@v4
         with:
